@@ -9,6 +9,7 @@
 		<script src="/extlibs/jquery-datatables/jquery.datatables.js"></script>
 		<link rel="stylesheet/less" type="text/css" href="/styles/pages.less">
 		<script src="/extlibs/less/less.js"></script>
+		<link rel="stylesheet" type="text/css" href="/styles/jquery-datatables.css">
 		<script src="/scripts/pages/fleets/spreadsheet.js"></script>
 	</head>
 	<body>
