@@ -1,6 +1,9 @@
 Most Bugfixes are not included in this changelog. See github:
 https://github.com/resident-uhlig/chrome-hyperiums7/issues
 
+XXXX-XX-XX XX:XX:XX Version X.X.X
+* Added datatables to "per player" / "more details" fleets table
+
 2014-10-21 16:21:00 Version 0.6.1
 * Fixed unknown HAPI data "counterinfiltr"
 
